--- a/dashboard/package.json
+++ b/dashboard/package.json
@@ -20,9 +20,11 @@
     "@mui/material-nextjs": "^5.15.11",
     "axios": "^1.7.2",
     "next": "14.2.4",
+    "quill": "^2.0.2",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.51.5",
+    "react-quill": "^2.0.0",
     "yup": "^1.4.0"
   },
   "devDependencies": {
